# mtg-commander-picker

./: .dockerignore  .gitignore  .terraform.lock.hcl  Dockerfile  LICENSE  README.md  fly.toml  main.tf
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.test  app.py  pyproject.toml  script.py
backend/src/mtg_commander_picker/: config.py  main.py
backend/src/mtg_commander_picker/routes/: api.py
backend/src/mtg_commander_picker/services/: __init__.py  scryfall.py  sheets.py
backend/tests/: conftest.py  test_config.py  test_main.py
backend/tests/test_routes/: test_api.py
backend/tests/test_services/: test_scryfall.py  test_sheets.py
frontend/: package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs
frontend/src/: App.jsx  index.css
