[project]
name = "mtg-commander-picker"
version = "0.1.0"
description = "Backend service for the MTG Commander Picker app"
authors = [
    {name = "Evgenii Vasilenko",email = "vasilenko.e@gmail.com"}
]
license = {text = "MIT"}
readme = "../README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "gspread (>=6.2.0,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.1.1"
pytest-dotenv = "^0.5.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
env_files = [".env.test"]
addopts = "--cov=mtg_commander_picker"
pythonpath = "src"

[tool.coverage.report]
show_missing = true
skip_covered = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
